# FinalProjectSt

./: pyproject.toml  result.html
pages/: __init__.py  base_page.py  index_page.py  index_page_locators.py  login_success_page.py  login_success_page_locators.py  mini_statement_page.py  mini_statement_page_locators.py  mini_statement_success_page.py  mini_statement_success_page_locators.py
resources/: constants.py
tests/: conftest.py  result.html  test_utils.py  tests_login.py
