[tool.poetry]
name = "finalprojectst"
version = "0.1.0"
description = ""
authors = ["asus_ <amelii.sahar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
